# Deep-Learning

./: .gitignore  04_Assessment.ipynb  Desafio01_Joao_Cardoso_mlp_vs_cnn_comparison.ipynb  Desafio02_Joao_Cardoso_04_Assessment.ipynb  main.tex  submit_apuana.sh
Desafios_caio/: Desafio02_caio_04_assessment.ipynb  desafio1_caio_mlp_vs_cnn.ipynb
Desafios_joao/: Desafio01_Joao_Cardoso_mlp_vs_cnn_comparison.ipynb  Desafio02_Joao_Cardoso_04_Assessment.ipynb
Fundamentals_Deep_Learning/: 001_tensorflow.ipynb  00_jupyterlab.ipynb  01_mnist.ipynb  02_asl.ipynb  03_asl_cnn.ipynb  04a_asl_augmentation.ipynb  04b_asl_predictions.ipynb  05a_doggy_door.ipynb  05b_presidential_doggy_door.ipynb  06_headline_generator.ipynb  asl_model.h5  asl_model.keras
docs/: hibridability.tex
project/: .gitignore  README.md  pyproject.toml
project/docs/: bootstrap.md
project/scripts/: __init__.py  _analysis_common.py  _fig4_reproduction.py  _manifest.py  aggregate_results.py  analyze_advantage_regimes.py  assemble_resynth_circuit.py  compute_metrics.py  download_or_prepare_benchmarks.py  generate_highlight_graphs.py  plot_results.py  replay_public_decompositions.py  reproduce_fig4.py  reproduce_fig4b_binary_addition.py  run_compile_batch.py  run_compile_pipeline.sh  run_demo_train.py  run_pyzx_baseline.py  run_resynth.sh  setup_env.sh  slurm_quick_mod54_gadgets.sbatch
project/tests/: test_metrics_pipeline.py  test_reproduce_fig4.py
proposal/: proposta_projeto.tex
