[project]
name = "alphatensor-quantum-bootstrap"
version = "0.1.0"
description = "Reproducible bootstrap wrappers for AlphaTensor-Quantum and circuit-to-tensor."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = []

[dependency-groups]
dev = [
  "ipython>=8.32.0",
  "matplotlib>=3.9.2",
  "pandas>=2.2.3",
  "pyzx>=0.8.0",
  "pytest>=8.3.5",
  "qiskit>=1.3.2",
  "scipy>=1.14.1",
]
benchmarks = [
  "aiohttp>=3.11.0",
  "fsspec>=2024.10.0",
  "h5py>=3.12.1",
  "pennylane>=0.40.0",
]
demo-cpu = [
  "absl-py>=2.1.0",
  "chex==0.1.86",
  "dm-haiku",
  "einshape",
  "etils==1.9.4",
  "immutabledict>=4.2.0",
  "jax==0.4.33",
  "jaxlib==0.4.33",
  "jaxtyping==0.2.34",
  "jmp==0.0.4",
  "mctx==0.0.5",
  "ml-dtypes==0.5.0",
  "numpy>=2.1.1",
  "opt-einsum==3.3.0",
  "optax==0.2.3",
  "scipy==1.14.1",
  "tabulate==0.9.0",
  "toolz==0.12.1",
  "typeguard==2.13.3",
  "typing-extensions==4.12.2",
]
demo-cuda12 = [
  "absl-py>=2.1.0",
  "chex==0.1.86",
  "dm-haiku",
  "einshape",
  "etils==1.9.4",
  "immutabledict>=4.2.0",
  "jax==0.4.33",
  "jaxlib==0.4.33",
  "jax-cuda12-pjrt==0.4.33; platform_system == 'Linux'",
  "jax-cuda12-plugin==0.4.33; platform_system == 'Linux'",
  "jaxtyping==0.2.34",
  "jmp==0.0.4",
  "mctx==0.0.5",
  "ml-dtypes==0.5.0",
  "numpy>=2.1.1",
  "nvidia-cublas-cu12==12.6.1.4; platform_system == 'Linux'",
  "nvidia-cuda-cupti-cu12==12.6.68; platform_system == 'Linux'",
  "nvidia-cuda-nvcc-cu12==12.6.68; platform_system == 'Linux'",
  "nvidia-cuda-runtime-cu12==12.6.68; platform_system == 'Linux'",
  "nvidia-cudnn-cu12==9.4.0.58; platform_system == 'Linux'",
  "nvidia-cufft-cu12==11.2.6.59; platform_system == 'Linux'",
  "nvidia-cusolver-cu12==11.6.4.69; platform_system == 'Linux'",
  "nvidia-cusparse-cu12==12.5.3.3; platform_system == 'Linux'",
  "nvidia-nccl-cu12==2.23.4; platform_system == 'Linux'",
  "nvidia-nvjitlink-cu12==12.6.68; platform_system == 'Linux'",
  "opt-einsum==3.3.0",
  "optax==0.2.3",
  "scipy==1.14.1",
  "tabulate==0.9.0",
  "toolz==0.12.1",
  "typeguard==2.13.3",
  "typing-extensions==4.12.2",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.uv.sources]
dm-haiku = { git = "https://github.com/deepmind/dm-haiku", rev = "af844e988886305286c464c1f6d7fe7656773fde" }
einshape = { git = "https://github.com/deepmind/einshape", rev = "d91ab136da3d97f4ba2b4582531cdc2dfd9fab0a" }
